Fixing mordant ffm bugs(unsafe yet)